add details for projects + what ive learned

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 				<section>
 					<h2>About Me...</h2>
 					<p>
-						<span class="fragment fade-up">Art School (drop out) <span class="fragment highlight-red">=></span></span>
-						<span class="fragment fade-up">Bike Messenger <span class="fragment highlight-red">=></span></span>
+						<span class="fragment fade-up">Art School (drop out) =></span>
+						<span class="fragment fade-up">Bike Messenger =></span>
 						</br>
-						<span class="fragment fade-up">Cartographer + GIS Speacilist <span class="fragment highlight-red">=></span></span>
-						<span class="fragment fade-up">Geo-Web Developer</span>
+						<span class="fragment fade-up"> Cartographer + GIS Speacilist =></span>
+						<span class="fragment fade-up"> Geo-Web Developer</span>
 					</p>
 
 					<aside class="notes">
@@ -79,47 +79,164 @@
 
 				<!-- AM I RENT STABILIZED? -->
 				<section>
-					<h4>Am I Rent Stabilized?</h4>
-					<img alt="am i rent stabilized animated gif" src="images/amirentstabilized.gif" />
+					<section>
+						<h4>Am I Rent Stabilized?</h4>
+						<img alt="am i rent stabilized animated gif" src="images/amirentstabilized.gif" />
 
-					<aside class="notes">
-						- using open data & tech to motivate average people to become activists
-						- there's a cash incentive but I decided not to go that route
-					</aside>
-				</section>
+						<aside class="notes">
+							- A web app to encourage NYC tenants to find out if their landlord is illegally over charging them for a rent-regulated apartment.
+							- using open data & tech to motivate average people to become activists
+							- there's a monetary incentive for people to check their apartment's status but I decided not to go that route
+						</aside>
+					</section>
 
-				<section>
-					<h4>Am I Rent Stabilized?</h4>
-					<img alt="am i rent stabilized animated gif" src="images/amirentstabilized-langs.gif" />
+					<section>
+						<p>Language Translations</p>
+						<img alt="am i rent stabilized animated gif" src="images/amirentstabilized-langs.gif" />
 
-					<aside class="notes">
-						- multi-lingual was important
-						- translated all of the site's content to spanish and chinese (next two most commonly spoken languages in NYC)
-					</aside>
+						<aside class="notes">
+							- multi-lingual was important
+							- translated all of the site's content to spanish and chinese (next two most commonly spoken languages in NYC)
+						</aside>
+					</section>
+
+					<section>
+						<p>Goals:</p>
+						<ul>
+							<li>Educate NYC tenants about rent regulation</li>
+							<li>Motivate them to take action</li>
+						</ul>
+					</section>
+
+					<section>
+						<img alt="HCR RS List" src="images/hcr-list-pdf.png" />
+					</section>
+
+					<section>
+						<img alt="HCR RS List" src="images/hcr-list-pdf_bbl_highlight.png" />
+					</section>
+
+					<section>
+						<img src="images/nyc_pluto.png" />
+					</section>
+
+					<section>
+						<img src="images/nyc-likely-reg-vs-non-reg-rent-stabl.jpg" />
+					</section>
+
 				</section>
 
 				<!-- NORTHWEST BUSHWICK COMMUNITY MAP -->
 				<section>
-					<h4>The Northwest Bushwick Community Map</h4>
-					<img src="images/bushwick-map.gif" />
+
+					<section>
+						<h4>The Northwest Bushwick Community Map</h4>
+						<img src="images/bushwick-map.gif" />
+					</section>
+
+					<section>
+						<img alt="nwb map before redesign" src="images/nwb-map-before.jpg" />
+					</section>
+
+					<section>
+						<p>Goals</p>
+						<ul>
+							<li>Improving technical parts for better performance</li>
+							<li>Improving the overall design, UX, & site layout</li>
+							<li>Giving the map context with narrative</li>
+						</ul>
+					</section>
+
+					<section>
+						<p>Outcomes</p>
+						<ul>
+							<li>Helps gives housing organizers better access to data</li>
+							<li>Gives housing advocacy groups more legitimacy</li>
+							<li>NWB won a small grant to do outreach</li>
+						</ul>
+					</section>
+
 				</section>
 
 				<!-- TOXICITY MAP  -->
 				<section>
-					<h4>Greenpoint Williamsburg Toxicity Map</h4>
-					<img alt="toxicity map animated gif" src="images/nag-toxicity-map.gif"  />
+
+					<section>
+						<h4>Greenpoint Williamsburg Toxicity Map</h4>
+						<img alt="toxicity map animated gif" src="images/nag-toxicity-map.gif"  />
+					</section>
+
+					<section>
+						<p>Collaboration between</p>
+						<ul>
+							<li>Neighbors Allied for Good Growth Brooklyn</li>
+							<li>Pratt’s Spatial Analysis and Visualization Initiative</li>
+						</ul>
+					</section>
+
+					<section>
+						<p>Goals:</p>
+						<ul>
+							<li>Census and EPA data</li>
+							<li>History of industrial North Broooklyn</li>
+							<li>Making access to this data more accessible</li>
+							<li>Providing context to the data</li>
+						</ul>
+					</section>
 				</section>
 
 				<!-- DAP MAP -->
 				<section>
-					<h4>The Displacement Alert Project Map</h4>
-					<img src="images/dap-map.gif" />
+
+					<section>
+						<h4>The Displacement Alert Project Map</h4>
+						<img src="images/dap-map.gif" />
+					</section>
+
+					<section>
+						<p>Collaboration with</p>
+						<p>Association for Neighborhood and Housing Development</p>
+					</section>
+
+					<section>
+						<p>
+							Indicators of Real Estate Speculation:
+						</p>
+						<ul>
+							<li>Sale Price vs. Avg Community District Sale Price</li>
+							<li>Construction permits (NYC DOB Jobs)</li>
+							<li>Loss in Rent Stabilized Units</li>
+						</ul>
+					</section>
 				</section>
 
 				<!-- LANDSCAPES OF PROFIT -->
 				<section>
-					<h4>Landscapes of Profit</h4>
-					<img src="images/landscapes-of-profit.gif" />
+
+					<section>
+						<h4>Landscapes of Profit</h4>
+						<img src="images/landscapes-of-profit.gif" />
+					</section>
+
+					<section>
+						<p>Goals</p>
+						<ul>
+							<li>Visualizing a proposed “Flip Tax” in NYC</li>
+							<li>Experiment with ACRIS data</li>
+							<li>Collaborate with NYC colleauges</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<h4>What Have I Learned?</h4>
+					<ul>
+						<li class="fragment fade-up">Creating this work isn’t easy.</li>
+						<li class="fragment fade-up">Data needs liberating.</li>
+						<li class="fragment fade-up">Maps have power.</li>
+						<li class="fragment fade-up">Collaboration is paramount.</li>
+						<li class="fragment fade-up">Non-profits and community groups need tech help.</li>
+					</ul>
 				</section>
 
 				<!-- TOOLS OF THE TRADE -->
