+ what ive learned, advice for learning, links

--- a/index.html
+++ b/index.html
@@ -53,18 +53,17 @@
 						<li class="fragment fade-up">Open Data</li>
 						<li class="fragment fade-up">Civic Tech</li>
 						<li class="fragment fade-up">Housing & Social Justice</li>
-						<li class="fragment fade-up">Narrative & Exploration</li>
-						<li class="fragment fade-up">Tools of the Trade</li>
+						<li class="fragment fade-up">Narrative</li>
 					</ul>
 				</section>
 
 				<section>
 					<h2>About Me...</h2>
 					<p>
-						<span class="fragment fade-up">Art School (drop out) =></span>
+						<span class="fragment fade-up">Art School =></span>
 						<span class="fragment fade-up">Bike Messenger =></span>
 						</br>
-						<span class="fragment fade-up"> Cartographer + GIS Speacilist =></span>
+						<span class="fragment fade-up"> Cartographer + GIS Specialist =></span>
 						<span class="fragment fade-up"> Geo-Web Developer</span>
 					</p>
 
@@ -82,29 +81,20 @@
 					<section>
 						<h4>Am I Rent Stabilized?</h4>
 						<img alt="am i rent stabilized animated gif" src="images/amirentstabilized.gif" />
-
-						<aside class="notes">
-							- A web app to encourage NYC tenants to find out if their landlord is illegally over charging them for a rent-regulated apartment.
-							- using open data & tech to motivate average people to become activists
-							- there's a monetary incentive for people to check their apartment's status but I decided not to go that route
-						</aside>
 					</section>
 
 					<section>
 						<p>Language Translations</p>
 						<img alt="am i rent stabilized animated gif" src="images/amirentstabilized-langs.gif" />
-
-						<aside class="notes">
-							- multi-lingual was important
-							- translated all of the site's content to spanish and chinese (next two most commonly spoken languages in NYC)
-						</aside>
 					</section>
 
 					<section>
 						<p>Goals:</p>
 						<ul>
-							<li>Educate NYC tenants about rent regulation</li>
-							<li>Motivate them to take action</li>
+							<li class="fragment fade-up">Educate NYC tenants about rent regulation</li>
+							<li class="fragment fade-up">Stop landlords from cheating the system</li>
+							<li class="fragment fade-up">Motivate tenants to take action and get help</li>
+							<li class="fragment fade-up">Use my own experience to help others</li>
 						</ul>
 					</section>
 
@@ -124,6 +114,16 @@
 						<img src="images/nyc-likely-reg-vs-non-reg-rent-stabl.jpg" />
 					</section>
 
+					<section>
+						<p>Outcomes:</p>
+						<ul>
+							<li class="fragment fade-up">Lots and lots of page visits ~230,000</li>
+							<li class="fragment fade-up">Featured by Time Out NYC, DNA Info, & others</li>
+							<li class="fragment fade-up">Contacted by renters who've been reimbursed</li>
+							<li class="fragment fade-up">Contacted by housing organizations who use it</li>
+						</ul>
+					</section>
+
 				</section>
 
 				<!-- NORTHWEST BUSHWICK COMMUNITY MAP -->
@@ -141,18 +141,18 @@
 					<section>
 						<p>Goals</p>
 						<ul>
-							<li>Improving technical parts for better performance</li>
-							<li>Improving the overall design, UX, & site layout</li>
-							<li>Giving the map context with narrative</li>
+							<li class="fragment fade-up">Improving technical parts for better performance</li>
+							<li class="fragment fade-up">Improving the overall design, UX, & site layout</li>
+							<li class="fragment fade-up">Giving the map context with narrative</li>
 						</ul>
 					</section>
 
 					<section>
 						<p>Outcomes</p>
 						<ul>
-							<li>Helps gives housing organizers better access to data</li>
-							<li>Gives housing advocacy groups more legitimacy</li>
-							<li>NWB won a small grant to do outreach</li>
+							<li class="fragment fade-up">Provides housing organizers better access to data</li>
+							<li class="fragment fade-up">Gives housing advocacy groups more legitimacy</li>
+							<li class="fragment fade-up">NWB won a small grant to do outreach</li>
 						</ul>
 					</section>
 
@@ -169,18 +169,18 @@
 					<section>
 						<p>Collaboration between</p>
 						<ul>
-							<li>Neighbors Allied for Good Growth Brooklyn</li>
-							<li>Pratt’s Spatial Analysis and Visualization Initiative</li>
+							<li class="fragment fade-up">Neighbors Allied for Good Growth Brooklyn</li>
+							<li class="fragment fade-up">Pratt’s Spatial Analysis and Visualization Initiative</li>
 						</ul>
 					</section>
 
 					<section>
 						<p>Goals:</p>
 						<ul>
-							<li>Census and EPA data</li>
-							<li>History of industrial North Broooklyn</li>
-							<li>Making access to this data more accessible</li>
-							<li>Providing context to the data</li>
+							<li class="fragment fade-up">Census and EPA data</li>
+							<li class="fragment fade-up">History of industrial North Brooklyn</li>
+							<li class="fragment fade-up">Making access to this data more accessible</li>
+							<li class="fragment fade-up">Providing context to the data</li>
 						</ul>
 					</section>
 				</section>
@@ -195,17 +195,18 @@
 
 					<section>
 						<p>Collaboration with</p>
-						<p>Association for Neighborhood and Housing Development</p>
+						<ul>
+							<li class="fragment fade-up">Association for Neighborhood and Housing Development</li>
+							<li class="fragment fade-up"><a href="http://nijel.org/" target="_blank">NiJel</a></li>
+						</ul>
 					</section>
 
 					<section>
-						<p>
-							Indicators of Real Estate Speculation:
-						</p>
+						<p>Indicators of Real Estate Speculation:</p>
 						<ul>
-							<li>Sale Price vs. Avg Community District Sale Price</li>
-							<li>Construction permits (NYC DOB Jobs)</li>
-							<li>Loss in Rent Stabilized Units</li>
+							<li class="fragment fade-up">Sale Price vs. Avg Community District Sale Price</li>
+							<li class="fragment fade-up">Construction permits (NYC DOB Jobs)</li>
+							<li class="fragment fade-up">Loss in Rent Stabilized Units</li>
 						</ul>
 					</section>
 				</section>
@@ -221,9 +222,9 @@
 					<section>
 						<p>Goals</p>
 						<ul>
-							<li>Visualizing a proposed “Flip Tax” in NYC</li>
-							<li>Experiment with ACRIS data</li>
-							<li>Collaborate with NYC colleauges</li>
+							<li class="fragment fade-up">Visualizing a proposed “Flip Tax” in NYC</li>
+							<li class="fragment fade-up">Experiment with ACRIS data</li>
+							<li class="fragment fade-up">Collaborate with NYC colleauges</li>
 						</ul>
 					</section>
 				</section>
@@ -231,11 +232,11 @@
 				<section>
 					<h4>What Have I Learned?</h4>
 					<ul>
-						<li class="fragment fade-up">Creating this work isn’t easy.</li>
-						<li class="fragment fade-up">Data needs liberating.</li>
-						<li class="fragment fade-up">Maps have power.</li>
-						<li class="fragment fade-up">Collaboration is paramount.</li>
-						<li class="fragment fade-up">Non-profits and community groups need tech help.</li>
+						<li class="fragment fade-up">Creating this work isn’t easy</li>
+						<li class="fragment fade-up">Data needs liberating</li>
+						<li class="fragment fade-up">Maps have power</li>
+						<li class="fragment fade-up">Collaboration is paramount</li>
+						<li class="fragment fade-up">Non-profits and community groups need tech help</li>
 					</ul>
 				</section>
 
@@ -243,35 +244,45 @@
 				<section id="tools-of-the-trade">
 					<h3>Tools of the Trade</h3>
 					<ul>
-						<li class="fragment fade-up">Javascript <span class="fragment fade-up">Javascript</span> <span class="fragment fade-up">Javascript!!!</span></li>
-						<li class="fragment fade-up">Map Tiles</li>
-						<li class="fragment fade-up">GeoJSON</li>
-						<li class="fragment fade-up">QGIS</li>
-						<li class="fragment fade-up">SQL</li>
-						<li class="fragment fade-up">PostGIS</li>
-						<li class="fragment fade-up">Leaflet.JS</li>
-						<li class="fragment fade-up">CARTO(DB)(.JS)</li>
-						<li class="fragment fade-up">MapBox</li>
-						<li class="fragment fade-up">D3.JS</li>
-						<li class="fragment fade-up">Node.JS</li>
-						<li class="fragment fade-up">CSS & Sass</li>
+						<li class="fragment fade-up">Javascript
+							<span class="fragment fade-up">Javascript </span>
+							<span class="fragment fade-up">
+								<a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">Javascript!!!</a>
+							</span>
+						</li>
+						<li class="fragment fade-up"><a href="http://www.w3schools.com/" target="_blank">HTML & CSS</a></li>
+						<li class="fragment fade-up"><a href="http://leafletjs.com/" target="_blank">Leaflet</a></li>
+						<li class="fragment fade-up"><a href="https://en.wikipedia.org/wiki/Tiled_web_map" target="_blank">Map Tiles</a></li>
+						<li class="fragment fade-up"><a href="http://qgis.org/en/site/" target="_blank">QGIS</a></li>
+						<li class="fragment fade-up"><a href="https://en.wikipedia.org/wiki/GeoJSON" target="_blank">GeoJSON</a></li>
+						<li class="fragment fade-up"><a href="https://en.wikipedia.org/wiki/SQL" target="_blank">SQL</a></li>
+						<li class="fragment fade-up"><a href="http://postgis.net/" target="_blank">PostGIS</a></li>
+						<li class="fragment fade-up"><a href="https://carto.com/" target="_blank">CARTO</a></li>
+						<li class="fragment fade-up"><a href="https://www.mapbox.com/" target="_blank">MapBox</a></li>
+						<li class="fragment fade-up"><a href="https://d3js.org/" target="_blank">D3</a></li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Advice For Learning</h3>
+					<ul>
+						<li class="fragment fade-up">Start out with the basics</li>
+						<li class="fragment fade-up">Learn one thing at a time</li>
+						<li class="fragment fade-up">Learn by making things</li>
+						<li class="fragment fade-up">Learn from / with others</li>
 					</ul>
 				</section>
 
 				<!-- FIN -->
 				<section>
 					<h2>Thank you!</h2>
-					<p>
-						Twitter: <a href="https://twitter.com/chrislhenrick" target="_blank">@chrislhenrick</a>
-					</p>
-					<p>
-						Email: <a mailto="chrishenrick@gmail.com">chrishenrick [at] gmail</a>
-					</p>
-					<p>
-						Website: <a href="http://clhenrick.io" target="_blank">clhenrick.io</a>
-					</p>
+					<p>Twitter: <a href="https://twitter.com/chrislhenrick" target="_blank">@chrislhenrick</a></p>
+					<p>Email: <a mailto="chrishenrick@gmail.com">chrishenrick [at] gmail</a></p>
+					<p>Website: <a href="http://clhenrick.io" target="_blank">clhenrick.io</a></p>
+					<p>This presentation: <a href="http://bit.ly/maps-open-data-web" target="_blank">bit.ly/maps-open-data-web</a></p>
 				</section>
 
+			<!-- END SLIDS -->
 			</div>
 
 		</div>
@@ -286,16 +297,13 @@
 				center: true,
 				fragments: true,
 				showNotes: false,
-
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
-
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 					{ src: 'plugin/notes/notes.js', async: true }
 				]
 			});
-
 		</script>
 	</body>
 </html>
