add some stamen work, fix some spelling / grammar

--- a/index.html
+++ b/index.html
@@ -47,17 +47,6 @@
 				</section>
 
 				<section>
-					<h2>Topics</h2>
-					<p>My Work and how it relates to:</p>
-					<ul>
-						<li class="fragment fade-up">Open Data</li>
-						<li class="fragment fade-up">Civic Tech</li>
-						<li class="fragment fade-up">Housing & Social Justice</li>
-						<li class="fragment fade-up">Narrative</li>
-					</ul>
-				</section>
-
-				<section>
 					<h2>About Me...</h2>
 					<p>
 						<span class="fragment fade-up">Art School =></span>
@@ -70,6 +59,48 @@
 					<aside class="notes">
 						While at MFA DT I became interested in housing, tenants rights, and open data relating to it in NYC.
 					</aside>
+				</section>
+
+				<section>
+					<section>
+						<h2>Stamen Design</h2>
+						<p>Featured Work</p>
+					</section>
+
+					<section>
+						<img src="images/stamen-amazonia.png" />
+					</section>
+
+					<section>
+						<img src="images/stamen-audubon.gif" />
+					</section>
+
+					<section>
+						<img src="images/stamen-financial.png" />
+					</section>
+
+					<section>
+						<img src="images/stamen-migration.png" />
+					</section>
+
+					<section>
+						<img src="images/stamen-parks-conservancy.png" />
+					</section>
+
+					<section>
+						<img src="images/stamen-atlas-emo.jpg" />
+					</section>
+				</section>
+
+				<section>
+					<h2>Topics</h2>
+					<p>My Work and how it relates to:</p>
+					<ul>
+						<li class="fragment fade-up">Open Data</li>
+						<li class="fragment fade-up">Civic Tech</li>
+						<li class="fragment fade-up">Housing & Social Justice</li>
+						<li class="fragment fade-up">Narrative</li>
+					</ul>
 				</section>
 
 				<section>
@@ -151,8 +182,8 @@
 						<p>Outcomes</p>
 						<ul>
 							<li class="fragment fade-up">Provides housing organizers better access to data</li>
-							<li class="fragment fade-up">Gives housing advocacy groups more legitimacy</li>
-							<li class="fragment fade-up">NWB won a small grant to do outreach</li>
+							<li class="fragment fade-up">Gave NWB more legitimacy with politicians</li>
+							<li class="fragment fade-up">NWB won a small grant to do community outreach</li>
 						</ul>
 					</section>
 
@@ -177,10 +208,9 @@
 					<section>
 						<p>Goals:</p>
 						<ul>
-							<li class="fragment fade-up">Census and EPA data</li>
+							<li class="fragment fade-up">Utilize Census and EPA data</li>
 							<li class="fragment fade-up">History of industrial North Brooklyn</li>
-							<li class="fragment fade-up">Making access to this data more accessible</li>
-							<li class="fragment fade-up">Providing context to the data</li>
+							<li class="fragment fade-up">Educating the public about potential environmental hazards</li>
 						</ul>
 					</section>
 				</section>
@@ -204,8 +234,8 @@
 					<section>
 						<p>Indicators of Real Estate Speculation:</p>
 						<ul>
-							<li class="fragment fade-up">Sale Price vs. Avg Community District Sale Price</li>
-							<li class="fragment fade-up">Construction permits (NYC DOB Jobs)</li>
+							<li class="fragment fade-up">Sale Price vs. Avg Council District Sale Price</li>
+							<li class="fragment fade-up">Number of construction permits (NYC DOB Jobs)</li>
 							<li class="fragment fade-up">Loss in Rent Stabilized Units</li>
 						</ul>
 					</section>
